--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "watch": "watchify views/index.js -t babelify -o public/js/bundle.js --debug --verbose"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -16,6 +17,13 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "serve-favicon": "~2.4.2",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^7.3.0",
+    "watchify": "^3.9.0"
   }
 }
