--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "watch": "watchify views/index.js -t babelify -o public/js/bundle.js --debug --verbose"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-react-views": "^0.10.2",
-    "jade": "~1.11.0",
+    "express-session": "^1.15.5",
+    "form-urlencoded": "^2.0.4",
+    "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
