--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watch": "watchify views/index.js -t babelify -o public/js/bundle.js --debug --verbose"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
     "connect-mongo": "^1.3.2",
@@ -23,7 +24,9 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
