--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.15.2",
     "express-react-views": "^0.10.2",
     "express-session": "^1.15.5",
+    "file-saver": "^1.3.3",
     "form-urlencoded": "^2.0.4",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
