--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "redux": "^3.7.2",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3",
-    "streamsaver": "^1.0.1"
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
