--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
@@ -27,6 +28,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "redis": "^2.8.0",
     "redux": "^3.7.2",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
