--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "debug": "DEBUG=datastreamer-server:info node ./bin/www",
+    "debug-verbose": "DEBUG=datastreamer-server:* node ./bin/www",
     "watch": "watchify views/index.js -t babelify -o public/js/bundle.js --debug --verbose"
   },
   "dependencies": {
@@ -11,7 +13,8 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "~1.17.1",
-    "connect-mongo": "^1.3.2",
+    "connect-mongo": "^2.0.0",
+    "connect-redis": "^3.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
@@ -23,6 +26,7 @@
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
@@ -32,7 +36,8 @@
     "redux": "^3.7.2",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "socket.io-redis": "^5.2.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
