--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "express-session": "^1.15.5",
     "file-saver": "^1.3.3",
     "form-urlencoded": "^2.0.4",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.11.10",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
+    "passport-custom": "^1.0.5",
     "passport-local": "^1.0.0",
-    "passport.socketio": "^3.7.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
