--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug": "DEBUG=datastreamer-server:info node ./bin/www",
+    "debug": "DEBUG=datastreamer-server:info* node ./bin/www",
     "debug-verbose": "DEBUG=datastreamer-server:* node ./bin/www",
     "watch": "watchify views/index.js -t babelify -o public/js/bundle.js --debug --verbose"
   },
