--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redis": "^2.8.0",
     "redux": "^3.7.2",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.75.1",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
@@ -44,6 +47,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
+    "browserify-css": "^0.12.1",
     "watchify": "^3.9.0"
   }
 }
