--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.8",
     "redis": "^2.8.0",
     "redux": "^3.7.2",
     "semantic-ui-css": "^2.2.12",
