Switch from browserify to webpack

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "build": "webpack",
     "debug": "DEBUG=datastreamer-server:info* node ./bin/www",
     "debug-verbose": "DEBUG=datastreamer-server:* node ./bin/www",
     "watch": "watchify views/index.js -t babelify -o public/js/bundle.js --debug --verbose"
@@ -42,11 +43,12 @@
     "socket.io-redis": "^5.2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify-css": "^0.12.1",
-    "watchify": "^3.9.0"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
