--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redis": "^2.8.0",
     "redux": "^3.7.2",
     "semantic-ui-css": "^2.2.12",
+    "semantic-ui-icon": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
