--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "socket.io-client": "^2.0.3",
     "socket.io-redis": "^5.2.0",
     "style-loader": "^0.19.0",
+    "uniqid": "^4.1.1",
     "url-loader": "^0.6.2"
   },
   "devDependencies": {
