--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "express": "~4.15.2",
     "express-react-views": "^0.10.2",
     "express-session": "^1.15.5",
+    "express-validator": "^4.3.0",
     "file-saver": "^1.3.3",
     "form-urlencoded": "^2.0.4",
     "jsonwebtoken": "^8.1.0",
     "morgan": "~1.8.1",
+    "password-validator": "^4.0.0",
     "pg": "^7.4.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
