--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^4.3.0",
     "file-saver": "^1.3.3",
     "form-urlencoded": "^2.0.4",
+    "fs-extra": "^5.0.0",
     "jsonwebtoken": "^8.1.0",
     "morgan": "~1.8.1",
     "password-validator": "^4.0.0",
