--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "createDB": "node ./scripts/createDB.js",
-    "watch": "webpack",
+    "watch": "webpack --config webpack.dev.config.js",
+    "build": "webpack --config webpack.build.config.js",
     "debug": "DEBUG=datastreamer-server:info* node ./bin/www",
     "debug-verbose": "DEBUG=datastreamer-server:* node ./bin/www"
   },
@@ -54,6 +55,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
+    "progress-bar-webpack-plugin": "^1.10.0",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   }
