--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,4 @@ services:
     depends_on:
       - postgres
       - redis
-    command: ["./scripts/wait_for_it.sh", "postgres:5432", "--", "npm", "run", "debug"]
+    command: bash -c "chmod +x ./scripts/wait_for_it.sh && npm run build && ./scripts/wait_for_it.sh postgres:5432 -- npm run debug"
