--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datastreamer-server",
   "version": "0.0.0",
-  "private": true,
+  "description": "Server for authentication and signalling for the purpose of establishing a P2P connection.",
   "scripts": {
     "start": "node ./bin/www",
     "createDB": "node ./scripts/createDB.js",
@@ -10,6 +10,9 @@
     "debug": "DEBUG=datastreamer-server:info* node ./bin/www",
     "debug-verbose": "DEBUG=datastreamer-server:* node ./bin/www"
   },
+  "license": "MIT",
+  "author": "Hristo Spasov",
+  "repository": "github:hspasov/datastreamer-server",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
