--- a/src/package.json
+++ b/src/package.json
@@ -14,48 +14,48 @@
   "author": "Hristo Spasov",
   "repository": "github:hspasov/datastreamer-server",
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "express": "^4.17.3",
     "express-validator": "^4.3.0",
     "file-saver": "^1.3.8",
-    "form-urlencoded": "^2.0.7",
+    "form-urlencoded": "^2.0.9",
     "fs-extra": "^5.0.0",
-    "jsonwebtoken": "^8.2.1",
-    "morgan": "~1.8.1",
-    "password-validator": "^4.1.1",
-    "pg": "^7.4.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "password-validator": "^4.1.3",
+    "pg": "^7.18.2",
+    "react": "^15.7.0",
+    "react-dom": "^15.7.0",
+    "react-helmet": "^5.2.1",
+    "react-redux": "^5.1.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "redis": "^2.8.0",
     "redux": "^3.7.2",
-    "semantic-ui-css": "^2.3.1",
-    "semantic-ui-icon": "^2.3.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-icon": "^2.3.3",
     "semantic-ui-react": "^0.75.1",
     "serve-favicon": "~2.4.2",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "socket.io-redis": "^5.2.0",
+    "socket.io": "^2.4.1",
+    "socket.io-client": "^2.4.0",
+    "socket.io-redis": "^5.4.0",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "progress-bar-webpack-plugin": "^1.11.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "progress-bar-webpack-plugin": "^1.12.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.2"
+    "webpack-dev-server": "^2.11.5"
   }
 }
